--- a/src/shared/ui/Logo/Logo.scss
+++ b/src/shared/ui/Logo/Logo.scss
@@ -1,7 +1,7 @@
 .prefix__b {
-  fill: var(--c-gray);
+  fill: var(--gx-color-grey);
 }
 
 .prefix__a {
-  fill: var(--c-brand);
+  fill: var(--gx-color-green);
 }
