--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -1,5 +1,13 @@
+.page {
+  width: 100%;
+  background-color: #F9F9F9;
+}
 .layout {
-  max-width: 1920px;
   margin-left: auto;
   margin-right: auto;
+}
+.footer {
+  bottom: 0;
+  width: 100%;
+  background-color: white;
 }
